Added Basic authentication for anything other than a get request
